Removed usage of DataTypeConverter class and replaced it with newly added Base64 class in YoutubeSearchQueryHandlerFactory